feat: check default shell
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check default shell
+        run: |
+          echo -e "The default shel is: $0\n"
+
       - name: Build
         uses: snapcore/action-build@v1
         id: snapcraft
