--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -44,7 +44,7 @@ body:
     attributes:
       label: Snapd version
       description: >
-        Please paste here the output for the command: >
+        Please paste here the output for the command:
           `snap version`
     validations:
       required: true
