--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -55,8 +55,8 @@ body:
       label: OS version
       description: >
         Please paste here the output for the command:
-          `cat /etc/os-release`
-          `lsb_release -a`
+          * `cat /etc/os-release`
+          * `lsb_release -a`
     validations:
       required: true
 
@@ -66,7 +66,7 @@ body:
       label: Architecture
       description: >
         Please paste here the output for the command:
-          `uname -orvm`
+          * `uname -orvm`
     validations:
       required: true
 
