--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -35,7 +35,7 @@ body:
       label: environment
       description: >
         Please, copy these commands, execute in your terminal and paste here the results
-          ```
+          ```bash
             snap list docker; echo;
             snap version; echo;
             cat /etc/os-release; echo;
@@ -44,47 +44,6 @@ body:
       render: shell
     validations:
       required: true
-
-  # - type: input
-  #   id: revision
-  #   attributes:
-  #     label: Docker snap revision number
-  #     description: >
-  #       Applicable only if installed from the Store.
-  #       Which revision number of the Docker snap are you using?
-  #       You can check this by running `snap list docker` under the `Rev` column.
-  #     placeholder: "123"
-  #
-  # - type: textarea
-  #   id: snapversion
-  #   attributes:
-  #     label: Snapd version
-  #     description: >
-  #       Please paste here the output for the command:
-  #         `snap version`
-  #   validations:
-  #     required: true
-  #
-  # - type: textarea
-  #   id: osrelease
-  #   attributes:
-  #     label: OS version
-  #     description: >
-  #       Please paste here the output for the command:
-  #         * `cat /etc/os-release`
-  #         * `lsb_release -a`
-  #   validations:
-  #     required: true
-  #
-  # - type: textarea
-  #   id: arch
-  #   attributes:
-  #     label: Architecture
-  #     description: >
-  #       Please paste here the output for the command:
-  #         * `uname -orvm`
-  #   validations:
-  #     required: true
 
   - type: textarea
     id: logs
