debug: drop last line
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -39,7 +39,7 @@ body:
             snap list docker; echo;
             snap version; echo;
             cat /etc/os-release; echo;
-            uname -orvm; echo;
+            uname -orvm;
           ```
       render: shell
     validations:
