feat: add connections output
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -37,6 +37,7 @@ body:
         Please, copy these commands, execute in your terminal and paste here the results.
           ```bash
             snap list docker; echo;
+            snap connections docker; echo;
             snap version; echo;
             cat /etc/os-release; echo;
             uname -orvm;
