feat: make clear to copy all commands at once
Signed-off-by: Lincoln Wallace <lincoln.wallace@canonical.com>

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -34,7 +34,7 @@ body:
     attributes:
       label: Environment Information for Bug Reproduction
       description: >
-        Kindly copy the commands below, run them in your terminal,
+        Kindly copy **all** the commands below, run them in your terminal,
         and share the results here.
           ```bash
             echo -e "Docker snap description:\n"
