--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -61,6 +61,6 @@ body:
     attributes:
       label: Relevant log output
       description: >
-        Please copy and paste any relevant log output. Provide any additional information you may find useful here.
+        Please copy and paste here any relevant log output. Also, provide any additional information you may find useful here.
     validations:
       required: true
