--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -5,25 +5,28 @@ on:
     branches:
       - dev
 
+env:
+  DEFAULT_BRANCH: 'dev'
+
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
     steps:
       # Checkout the main branch to calculate its coverage
-      - name: Checkout main branch
+      - name: Checkout ${{ DEFAULT_BRANCH }} branch
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: $DEFAULT_BRANCH
 
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
           go-version: '1.x'
 
-      - name: Install dependencies for main branch
+      - name: Install dependencies for ${{ DEFAULT_BRANCH }} branch
         run: go mod tidy
 
-      - name: Run tests with coverage on main branch
+      - name: Run tests with coverage on ${{ DEFAULT_BRANCH }} branch
         run: |
           go test ./... -coverprofile=coverage.out
 
@@ -57,8 +60,8 @@ jobs:
       # Compare coverage between main and PR branches
       - name: Compare coverage
         run: |
-          echo "Main branch coverage: $main_coverage%"
-          echo "PR branch coverage: $pr_coverage%"
+          echo "$DEFAULT_BRANCH branch coverage: $main_coverage%"
+          echo "$GITHUB_HEAD_REF branch coverage: $pr_coverage%"
 
           if (( $(echo "$pr_coverage < $main_coverage" | bc -l) )); then
             echo "Code coverage decreased from $main_coverage% to $pr_coverage%"
