--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout ${{ env.DEFAULT_BRANCH }} branch
         uses: actions/checkout@v4
         with:
-          ref: $DEFAULT_BRANCH
+          ref: ${{ env.DEFAULT_BRANCH }}
 
       - name: Setup Go
         uses: actions/setup-go@v5
