--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,56 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check Kernel errors
+        run: |
+          sudo dmesg -l err
+
+      - name: Check Kernel criticals
+        run: |
+          sudo dmesg -l crit
+          
+      - name: Check Kernel alerts
+        run: |
+          sudo dmesg -l alert
+
+      - name: Check Kernel emergs
+        run: |
+          sudo dmesg -l emerg
+
       - name: Check default shell
         run: |
           echo -e "The default shel is: $0\n"
+          
+      - name: install Docker
+        run: sudo snap install docker --beta
 
+      - name: Check kernel again
+
+
+
+      - name: Check Kernel errors
+        run: |
+          sudo dmesg -l err
+
+      - name: Check Kernel criticals
+        run: |
+          sudo dmesg -l crit
+          
+      - name: Check Kernel alerts
+        run: |
+          sudo dmesg -l alert
+
+      - name: Check Kernel emergs
+        run: |
+          sudo dmesg -l emerg
+
+      - name: Check default shell
+        run: |
+          echo -e "The default shel is: $0\n"
+          
+      - name: install Docker
+        run: sudo snap install docker --beta
+              
       - name: Build
         uses: snapcore/action-build@v1
         id: snapcraft
