--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,7 @@ jobs:
         run: sudo snap install docker --beta
 
       - name: Check kernel again
-
-
+        run: echo ""
 
       - name: Check Kernel errors
         run: |
