chore: change confinement to strict

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -5,8 +5,7 @@ description: This is a snap to test snap store publishing features
 
 grade: stable
 base: core24
-# confinement: strict
-confinement: devmode
+confinement: strict
 
 apps:
   env:
