Add apt-cache command to check Docker package

--- a/.github/workflows/check_runner.yml
+++ b/.github/workflows/check_runner.yml
@@ -12,3 +12,4 @@ jobs:
           which docker
           snap list
           dpkg -S $(which docker)
+          apt-cache show $(dpkg -S $(which docker))
