Add pull_request trigger to merge queue workflow

--- a/.github/workflows/merge-queue-test.yml
+++ b/.github/workflows/merge-queue-test.yml
@@ -7,6 +7,8 @@ on:
 
   # Allows to run this workflow manually from the Actions tab.
   workflow_dispatch:
+  
+  pull_request:
   # Allows be called by a merge queue
   merge_group:
 
