--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ squashfs-root/
 
 # Output files
 .out
+
+# Golang code coverage profiles and other test artifacts
+*.out
+coverage.*
+*.coverprofile
+profile.cov
